--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "logly"
-version = "0.1.5"
+version = "0.1.6"
 description = "Blazingly Fast Rust-Powered Python Logging Utility with Advanced Features"
 edition = "2024"
 license = "MIT"
@@ -28,6 +28,7 @@ byte-unit = "5.1.6"
 arc-swap = "1.7.1"
 once_cell = "1.21.3"
 regex = "1.11.3"
+rayon = "1.11.0"
 ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
 
 [features]
