--- a/.github/release_drafter_template.yml
+++ b/.github/release_drafter_template.yml
@@ -1,25 +1,61 @@
-name-template: 'v$RESOLVED_VERSION'
+name-template: 'v$RESOLVED_VERSION 🌈'
 tag-template: 'v$RESOLVED_VERSION'
-exclude-labels:
-  - 'dependencies'
-  - 'skip-changelog'
+categories:
+  - title: '🚀 Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: '🐛 Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: '📚 Documentation'
+    labels:
+      - 'documentation'
+      - 'docs'
+  - title: '🧰 Maintenance'
+    labels:
+      - 'chore'
+      - 'maintenance'
+  - title: '🔧 CI/CD & Testing'
+    labels:
+      - 'ci'
+      - 'testing'
+      - 'github-actions'
+  - title: '⬆️ Dependencies'
+    labels:
+      - 'dependencies'
+      - 'deps'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
   major:
     labels:
+      - 'major'
       - 'breaking-change'
   minor:
     labels:
+      - 'minor'
+      - 'feature'
       - 'enhancement'
+  patch:
+    labels:
+      - 'patch'
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+      - 'chore'
+      - 'documentation'
+      - 'ci'
+      - 'testing'
+      - 'dependencies'
   default: patch
-categories:
-  - title: '⚠ Breaking changes'
-    label: 'breaking-change'
-  - title: 'Features'
-    labels: 'enhancement'
-  - title: 'Bug Fixes'
-    labels: 'bug'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
   ## Changes
 
   $CHANGES
+
+  ## Contributors
+
+  $CONTRIBUTORS
